COR22 : correction du problème de contraste sur les boutons CONTACT

--- a/css/style.css
+++ b/css/style.css
@@ -1078,6 +1078,18 @@ div#title > h2 + p {
 	color: #000 !important;
 }
 
+a.btn-atomic-tangerine.btn-rd {
+    background: #F3976C;
+    color: #000 !important; /** COR22 **/
+    border: 3px solid #F3976C; /** COR22 **/
+}
+
+a.btn-atomic-tangerine.btn-rd:hover {
+    background: #ffffff !important; /** COR22 **/
+    border: 3px solid #cccccc; /** COR22 **/
+    border-radius: 20px; /** COR22 **/
+}
+
 a[data-lightbox] {
 	margin-bottom: 24px;
 }
